Update Login User

--- a/WareHouseNJsound/Views/Home/Employee.cshtml
+++ b/WareHouseNJsound/Views/Home/Employee.cshtml
@@ -24,9 +24,12 @@
         <h3 style="font-family: 'Noto Sans Thai', sans-serif;">Employee</h3>
 
         <div class="mb-3 d-flex justify-content-between align-items-center" style="margin-bottom: 20px;">
-            <a asp-controller="" asp-action="" class="btn btn-success" style="font-family: 'Noto Sans Thai', sans-serif;">
-                <i class="bx bx-plus"></i> เพิ่ม Admin
+            <a asp-controller="Employee" asp-action="Create" class="btn btn-success" style="font-family: 'Noto Sans Thai', sans-serif;">
+                <i class="bx bx-plus"></i> เพิ่มพนักงาน
             </a>
+
+
+
 
             <div>
                 <input type="text" id="searchInput" class="form-control" placeholder="Search..." style="width: 300px;" />
