--- a/WareHouseNJsound/Views/Shared/_Layout.cshtml
+++ b/WareHouseNJsound/Views/Shared/_Layout.cshtml
@@ -65,8 +65,8 @@
                             <i class='icon bx bxs-store-alt'></i><span class="text nav-text">คลังสินค้า</span>
                         </a>
                     </li>
-                    <li id="Requests" class="nav-link" @* onclick="location.href='@Url.Action("MyRequest", "Request")'" *@>
-                        <a href="#" class="@(currentController == "Request" && currentAction == "MyRequest" ? "active" : "")">
+                    <li id="Requests" class="nav-link" onclick="location.href='@Url.Action("Create", "Request")'">
+                        <a href="#" class="@(currentController == "Request" && currentAction == "Create" ? "active" : "")">
                             <i class='icon bx bx-mail-send'></i><span class="text nav-text">เบิกสินค้า</span>
                         </a>
                     </li>
