--- a/WareHouseNJsound/Views/Shared/_Layout.cshtml
+++ b/WareHouseNJsound/Views/Shared/_Layout.cshtml
@@ -33,7 +33,6 @@
             }
 
         </div>
-
     </div>
 
     <div class="layout">
@@ -70,12 +69,11 @@
                             <i class='icon bx bx-mail-send'></i><span class="text nav-text">เบิกสินค้า</span>
                         </a>
                     </li>
-                    <li id="Requests" class="nav-link" onclick="location.href='@Url.Action("PendingRequets", "Request")'">
+                    <li id="RequestPending" class="nav-link right-align" onclick="location.href='@Url.Action("PendingRequets", "Request")'">
                         <a href="#" class="@(currentController == "Request" && currentAction == "PendingRequets" ? "active" : "")">
-                            <span class="text nav-text d-block text-end">คำร้องขอ</span>
+                            <span class="text nav-text">- คำร้องขอ</span>
                         </a>
                     </li>
-
 
 
                     <li id="Admin" class="nav-link" onclick="location.href='@Url.Action("Admin", "Home")'">
@@ -130,6 +128,14 @@
             });
         });
 
+                script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity = "sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin = "anonymous" ></script>
+    <script src="~/js/site.js"></script>
+
+    @* page-specific scripts from views *@
+    @await RenderSectionAsync("Scripts", required: false)
     </script>
+
 </body>
 </html>
