--- a/WareHouseNJsound/wwwroot/css/site.css
+++ b/WareHouseNJsound/wwwroot/css/site.css
@@ -1,6 +1,13 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+/* ชิดขวาเฉพาะ "คำร้องขอ" */
+#RequestPending .nav-text {
+    display: block;
+    text-align: right;
+}
+
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
