--- a/WareHouseNJsound/Views/Home/AdminCreate.cshtml
+++ b/WareHouseNJsound/Views/Home/AdminCreate.cshtml
@@ -9,6 +9,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
+    .avatar {
+        width: 130px;
+        height: 130px;
+        border-radius: 50%;
+        overflow: hidden;
+        border: 2px dashed var(--avatar-border, #ffc107);
+        display: inline-block;
+    }
+
+        .avatar img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+
     body {
         font-family: 'Noto Sans Thai', sans-serif;
     }
