--- a/WareHouseNJsound/Views/Home/Employee.cshtml
+++ b/WareHouseNJsound/Views/Home/Employee.cshtml
@@ -26,9 +26,10 @@
         <h3 style="font-family: 'Noto Sans Thai', sans-serif;">Employee</h3>
 
         <div class="mb-3 d-flex justify-content-between align-items-center" style="margin-bottom: 20px;">
-            <a asp-controller="Employee" asp-action="Create" class="btn btn-success" style="font-family: 'Noto Sans Thai', sans-serif;">
+            <a asp-controller="Home" asp-action="EmployeeCreate" class="btn btn-success" style="font-family: 'Noto Sans Thai', sans-serif;">
                 <i class="bx bx-plus"></i> เพิ่มพนักงาน
             </a>
+
 
 
 
@@ -93,8 +94,11 @@
                             }
                         </td>
                         <td>
-                            <a href="#" class="btn btn-sm btn-warning"><i class="bi bi-pencil"></i></a>
-                            <a href="#" class="btn btn-sm btn-danger"><i class="bi bi-trash"></i></a>
+                            <a asp-action="EmployeeEdit" asp-controller="Home" asp-route-id="@item.Employee_ID"
+                               class="btn btn-sm btn-warning"><i class="bi bi-pencil"></i></a>
+                            <button type="button" class="btn btn-sm btn-danger btn-delete" data-id="@item.Employee_ID">
+                                <i class="bi bi-trash"></i>
+                            </button>
                         </td>
                     </tr>
                 }
