--- a/WareHouseNJsound/wwwroot/css/site.css
+++ b/WareHouseNJsound/wwwroot/css/site.css
@@ -1,6 +1,25 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.avatar {
+    border-radius: 50%;
+    overflow: hidden;
+    display: inline-block
+}
+
+    .avatar img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block
+    }
+
+.avatar-60 {
+    width: 60px;
+    height: 60px
+}
+
+
 /* ชิดขวาเฉพาะ "คำร้องขอ" */
 #RequestPending .nav-text {
     display: block;
