--- a/WareHouseNJsound/Views/Home/EmployeeCreate.cshtml
+++ b/WareHouseNJsound/Views/Home/EmployeeCreate.cshtml
@@ -87,6 +87,12 @@
                             </select>
                             <span asp-validation-for="Gender_ID" class="text-danger"></span>
                         </div>
+
+                        <div class="col-md-12">
+                            <label asp-for="Personal_ID" class="d-flex text-end form-label">เลขบัตรประชาชน</label>
+                            <input asp-for="Personal_ID" class="form-control" placeholder="เลขบัตรประชาชน" />
+                            <span asp-validation-for="Personal_ID" class="text-danger"></span>
+                        </div>
                     </div>
 
                     <div class="d-flex justify-content-end gap-2 mt-4">
